<resources>
    <string name="app_name">鹰之眼</string>

    <string name="cancel">取消</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开链接</string>
    <string name="forget">取消保存</string>
    <string name="ok">确定</string>

    <string name="explosion_normal">正常</string>
    <string name="explosion_mem">剩余内存%s</string>
    <string name="explosion_open_camera">开启录像</string>
    <string name="explosion_recording">正在录像</string>
    <string name="explosion_take_picture">快速拍照</string>
    <string name="explosion_fullscreen">全屏</string>
    <string name="explosion_oxygen">氧气</string>
    <string name="explosion_co">一氧化碳</string>
    <string name="explosion_burn_gas">可燃气</string>
    <string name="explosion_hydrogen">硫化氢</string>
    <string name="explosion_qualified">合格</string>
    <string name="explosion_warn">警告</string>
    <string name="explosion_comm">通讯</string>
    <string name="explosion_collect">气体采集</string>
    <string name="explosion_setting">设置</string>
    <string name="explosion_back">返回</string>
    <string name="explosion_record_time">已录制: %s</string>

    <string name="comm_title">通讯</string>
    <string name="comm_just_now">刚刚</string>
    <string name="comm_send">发送</string>
    <string name="comm_speak">按住 说话</string>

    <string name="gas_collect_title">气体采集</string>
    <string name="gas_collect_prepare">未采集</string>
    <string name="gas_collect_start">开始采集</string>
    <string name="gas_collect_collecting">采集中</string>
    <string name="gas_collect_finish">采集完成</string>
    <string name="gas_collect_finished">已完成</string>
    <string name="gas_collect_err">采集失败</string>

    <string name="settings_title">设置</string>
    <string name="settings_picture">照片库</string>
    <string name="settings_video">录像库</string>
    <string name="settings_collect">气体采集库</string>
    <string name="settings_device_info">设备基础配置</string>
    <string name="settings_server">服务器通讯配置</string>
    <string name="settings_password">密码配置</string>
    <string name="settings_net">网络设置</string>
    <string name="settings_save">保存</string>
    <string name="settings_common">通用</string>
    <string name="settings_upload_no">未上传</string>
    <string name="settings_upload_ing">上传中</string>
    <string name="settings_upload_ok">上传成功</string>
    <string name="settings_select">选择</string>
    <string name="settings_cancel">取消</string>
    <string name="settings_upload">上传</string>
    <string name="settings_delete">删除</string>
    <string name="settings_select_object">选择项目</string>
    <string name="settings_channel">采集通道:%s</string>
    <string name="settings_qualified">合格</string>
    <string name="settings_unqualified">不合格</string>
    <string name="settings_process">采集数据:%d</string>
    <string name="settings_standard">合格标准:%s</string>

    <string name="settings_common_screen">屏幕</string>
    <string name="settings_common_screen_hint">在屏幕不操作的情况下，经过多长时间休眠</string>
    <string name="settings_common_light">亮度</string>
    <string name="settings_common_music">声音</string>
    <string name="settings_common_sleep">休眠</string>
    <string name="settings_common_boot_start">开机自启</string>
    <string name="settings_common_system_bar">显示导航栏与状态栏</string>

    <string name="settings_device_info_name">设备名称</string>
    <string name="settings_device_info_mac">设备MAC</string>
    <string name="settings_device_info_serial">设备序列号</string>
    <string name="settings_device_info_vendor">设备厂商</string>
    <string name="settings_device_info_model">设备型号</string>
    <string name="settings_device_info_firmware">固件版本号</string>
    <string name="settings_device_info_software">软件版本号</string>
    <string name="settings_device_info_name_not_empty">设备名称不能为空</string>

    <string name="settings_server_addr">服务器地址</string>
    <string name="settings_server_addr_hint">请输入服务器地址</string>
    <string name="settings_server_addr_not_empty">服务器地址不能为空</string>

    <string name="settings_network_wlan">无线局域网</string>
    <string name="settings_network_eth">有线网络</string>
    <string name="settings_network_net">网络</string>
    <string name="settings_network_disconnect">断开</string>
    <string name="settings_network_no_support">不支持该网络</string>
    <string name="settings_network_save_fail">网络保存失败</string>
    <string name="settings_network_connect">已连接</string>
    <string name="settings_network_no_connect">未连接</string>
    <string name="settings_network_config">网络配置</string>
    <string name="settings_network_forget">忽略此网络</string>
    <string name="settings_network_ipv4">IPV4地址</string>
    <string name="settings_network_ip_type">配置ip</string>
    <string name="settings_network_ip_static">静态</string>
    <string name="settings_network_ip_dhcp">自动</string>
    <string name="settings_network_ip_address">IP地址</string>
    <string name="settings_network_ip_netmask">子网掩码</string>
    <string name="settings_network_ip_gateway">网关</string>
    <string name="settings_network_ip_dns">DNS地址</string>

    <string name="settings_password_current_password">当前密码</string>
    <string name="settings_password_new_password">修改密码</string>
    <string name="settings_password_again_password">再次输入密码</string>
    <string name="settings_password_confirm">确认修改</string>

    <string name="toast_record_finish">录像完成</string>
    <string name="toast_record_err">录像失败,请稍后再试</string>
    <string name="toast_record_busy">正在关闭录像,请五秒后再试</string>
    <string name="toast_take_picture_finish">拍照完成</string>
    <string name="toast_take_picture_err">拍照失败,请稍后再试</string>
    <string name="toast_take_picture_busy">正在拍照,请五秒后再试</string>
    <string name="toast_time_short">两次操作时间过短,请5秒后再试</string>
    <string name="toast_collect_finish">气体采集完成</string>
    <string name="toast_collect_err">气体采集失败,请稍后再试</string>
</resources>