<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <TextView
            android:id="@+id/net_config_view_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_bg"
            android:drawableLeft="@mipmap/settings_back"
            android:drawablePadding="15dp"
            android:gravity="center_vertical|left"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/settings_net"
            android:textColor="@color/depth_blue"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/net_config_view_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:textColor="#333333"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/net_config_view_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/settings_save"
            android:textColor="@color/depth_blue"
            android:textSize="24sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="92"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/settings_network_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:padding="20dp"
            android:text="@string/settings_network_forget"
            android:textColor="@color/depth_blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/settings_network_ipv4"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/net_config_ip_type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_network_ip_type"
                    android:textColor="@color/depth_gray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/net_config_ip_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:text="@string/settings_network_ip_address"
                    android:textColor="@color/depth_gray"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/net_config_ip_address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="3"
                    android:background="@color/transparent"
                    android:gravity="right|center_vertical"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:text="@string/settings_network_ip_netmask"
                    android:textColor="@color/depth_gray"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/net_config_netmask"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="3"
                    android:background="@color/transparent"
                    android:gravity="right|center_vertical"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:text="@string/settings_network_ip_gateway"
                    android:textColor="@color/depth_gray"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/net_config_gateway"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="3"
                    android:background="@color/transparent"
                    android:gravity="right|center_vertical"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:text="@string/settings_network_ip_dns"
                    android:textColor="@color/depth_gray"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/net_config_dns"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="3"
                    android:background="@color/transparent"
                    android:gravity="right|center_vertical"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>