<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings_picture"
            android:textColor="#333333"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/picture_view_select"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/settings_select"
            android:textColor="@color/gray"
            android:textSize="24sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="92"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="86"
                android:orientation="horizontal"
                android:weightSum="100">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/picture_view_recycle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="88"
                    android:orientation="vertical" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/picture_view_select_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="14"
                android:orientation="vertical"
                android:visibility="gone">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="14"
                    android:orientation="horizontal">

                    <com.lanhu.explosion.widget.EqualLinearLayout
                        android:id="@+id/picture_view_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@mipmap/upload"
                            android:gravity="center"
                            android:text="@string/settings_upload"
                            android:textColor="@color/gray"
                            android:textSize="13sp" />
                    </com.lanhu.explosion.widget.EqualLinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/settings_select_object"
                        android:textColor="@color/depth_gray"
                        android:textSize="24sp" />

                    <com.lanhu.explosion.widget.EqualLinearLayout
                        android:id="@+id/picture_view_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@mipmap/delete"
                            android:gravity="center"
                            android:text="@string/settings_delete"
                            android:textColor="@color/gray"
                            android:textSize="13sp" />
                    </com.lanhu.explosion.widget.EqualLinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</LinearLayout>

